# PhantomDogs

./: .gitignore  README.md  edit mode ideas.txt
assets/: config.toml
linux/: CMakeLists - Working Pi.txt  CMakeLists - pkgcfg.txt  CMakeLists - wsl.txt  CMakeLists.txt
mac/: CMakeLists.txt  Readme.txt
msvc/: SapphireApp.sln  SapphireApp.vcxproj  SapphireApp.vcxproj.filters
need to deal with/: GUI.cpp  GUI.h  Movie.cpp  Movie.h  Scene uniqueptr.cpp  Scene.cpp  Scene.h  audio.cpp  main.cpp
src/: AVF.cpp  AVF.h  Audio.cpp  Audio.h  CIFF.cpp  CIFF.h  Cursor.cpp  GUI.cpp  GUI.h  HIFF.cpp  Loader.cpp  Loader.h  Movie.cpp  Movie.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  Utils.cpp  Utils.h  globals.h  main.cpp
src/HIFFChunks/: Dependency.h  SUM.cpp  SUM.h
src/HIFFChunks/ACT/: ACT.cpp  ACT.h
src/player-cpp-ffmpeg-sdl/: AudioCallback.cpp  FFAudio.cpp  FFAudio.h  FFPlayer.cpp  FFPlayer.h
switch/: Makefile  Makefile - Copy  Readme.txt  run.bat  send.bat
switch/PhantomDogs/: config.toml
vita/: CMakeLists.txt  Vita3K.exe - Shortcut.lnk  config.toml  notes.txt  stub.toml  ux0 - Shortcut.lnk
